--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,8 +1,11 @@
 @import "nav.scss"; 
 @import "index.scss";
 @import "buttons.scss";
+@import "footer.scss";
+@import "checkout.scss";
 
 body {
+
   background-color: #EEE;
 
   h1 {
