--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,75 +15,29 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
 
+  
+  <body id="test">
   <% include partials/nav %>
-  <body background="images/background.jpg">
+
     <section class="menu-container">
         <div class="menu-body">
           <div class="menu-section-main">
             <div class="menu-item">
-                <h2 class="menu-section-title">MAIN COURSE</h2>
-              <!-- <div class="menu-item-name">
-                Dish 1
-              </div>
-              <div class="menu-item-price">
-                $100
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION OF ITEM
-              </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button>
-              </div>
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Dish 2
-              </div>
-              <div class="menu-item-price">
-                $100
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION OF ITEM
-              </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button> -->
+              <h2 class="menu-section-title">MAIN COURSE</h2>
             </div>
-            </div>
-
+          </div>
 
           <div class="menu-section-drinks">
             <h2 class="menu-section-title">DRINKS</h2>
-          
+          </div>
 
-
-        </div>
         <div class="menu-body">
           <div class="menu-section-dessert">
             <h2 class="menu-section-title">DESSERT</h2>
-            <!-- <div class="menu-item">
-              <div class="menu-item-name">
-                Dessert 1
-              </div>
-              <div class="menu-item-price">
-                $20
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION DESSERT 1
-              </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div>
-
-
-            <div class="menu-item">
-              <div class="menu-item-name">
-                Dessert 2
-              </div>
-              <div class="menu-item-price">
-                $20
-              </div>
-              <div class="menu-item-description">
-                DESCRIPTION DESSERT 2
-              </div>
-                <button type="button" class="btn btn-outline-secondary">Add to order</button>
-            </div> -->
+          </div>
+        </div>
     </section>
 
   </body>
+  <% include partials/footer %>
 </html>
