--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,7 +2,7 @@
     <img class="logo"
         src="images/chicken.png">
     <span class="header" onclick="location.href='/';">FoodNow</span>
-    <button id="nav-button" type="button" onclick="clearCart()">Clear Cart </button>
+    <button id="nav-button1" type="button" onclick="clearCart()">Clear Cart </button>
     <button id="nav-button" type="button" onclick="location.href='/summary';">Cart <span id="count">0</span>
         <p id="burger-emoji">🛒</p>
     </button>
