--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -39,10 +39,9 @@
                     <label for="pnumber"><i class="phonenumber"></i> Phone Number</label>
                     <input type="text" id="pnumber" name="phonenumber" placeholder="+12345678901">
                     <input type="submit" value="Continue to checkout" class="btn">
-                    <div class="error">Error Message</div>
+                    <div class="error"></div>
 
                 </div>
-
               </div>
             </form>
           </div>
@@ -51,4 +50,5 @@
 
       </div>
   </body>
+                <% include partials/footer %>
 </html>
