--- a/public/styles/summary.css
+++ b/public/styles/summary.css
@@ -1,14 +1,3 @@
-.row {
-  margin-top: 3rem;
-  display: -ms-flexbox;
-  /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap;
-  /* IE10 */
-  flex-wrap: wrap;
-  margin: 0 -16px;
-}
-
 .col-25 {
   -ms-flex: 25%;
   /* IE10 */
@@ -39,7 +28,6 @@
   font-family: helvetica;
   font-style: italic;
   margin-top: 8rem;
-  background-color: #f2f2f2;
   padding: 5px 20px 15px 20px;
   border: 1px solid lightgrey;
   border-radius: 3px;
@@ -80,9 +68,58 @@ label {
   background-color: #a79696;
 }
 
-span.price {
+#summaryItem.item1 {
+  display: flex;
+  padding: 1rem;
+}
+
+.item1 {
+  font: helvetica;
+  display: inline-block;
+  justify-content: space-between;
+}
+
+.delete {
+  background-color: darkred;
+  border-radius: 5px;
+  margin-left: 2rem;
+  border: 2px solid #f4f5f4;
+  color: white;
+  font-weight: lighter;
   float: right;
-  color: grey;
+  text-align: left;
+  cursor: pointer;
+}
+
+.delete:hover {
+  background-color: darkred;
+}
+
+.add {
+  background-color: darkred;
+  border-radius: 5px;
+  border: 2px solid blacks;
+  color: white;
+  font-weight: lighter;
+  text-align: left;
+}
+
+.sub {
+  background-color: darkred;
+  margin-left: 1rem;
+  border-radius: 5px;
+  border: 2px solid blacks;
+  color: white;
+  font-weight: lighter;
+  text-align: left;
+}
+
+#1 {
+  text-align: right;
+}
+
+.itemId {
+  opacity: 0;
 }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
