--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
-
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/checkout.scss" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -12,34 +11,16 @@
   </head>
 
   <body>
+    <% include partials/nav %>
 
-      <nav id="nav-bar">
-        
-          <img class="logo"
-              src="https://www.mycutegraphics.com/graphics/cupcake/black-white-boy-with-cupcake.html">
-          <span class="header">FoodNow</span>
-      
-          <form id="main_pg_button" method="GET" action="/index">
-            <button id="nav-button" type="button">Home page
-                <p id="burger-emoji">🍔</p>
-            </button>
-          </form>
-
-          <form id="send-tweets" method="POST" action="/checkout">
-              <button id="nav-button" type="button">Cart
-                  <p id="burger-emoji">🍔</p>
-              </button>
-          </form>
-      </nav>
-
-      
-    <h2> GET READY FOR SOME GOOD FOOD</h2>
-    <h4>FoodNow</h4>
-    <p>The restaurant is now preparing your order.</p>
-    <p>We will send you a message on how long is going to take for your order to be ready.</p>
-        
-    <h4>ENJOY!</h4>
-
+    <div class="main-container">
+      <h2> GET READY FOR SOME GOOD FOOD</h2>
+        <h4>FoodNow</h4>
+          <p>The restaurant is now preparing your order.</p>
+          <p>We will send you a message on how long is going to take for your order to be ready.</p>    
+        <h4>ENJOY!</h4>
+    </div>
 
   </body>
+  <% include partials/footer %>
 </html>
