final version -- kindof

--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
-
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/summary.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/summary.js"></script>
-
+    <script type="text/javascript" src="/scripts/summary.js"></script> 
   </head>
+  
   <body>
       <% include partials/nav %>
 
@@ -37,7 +35,7 @@
                     <label for="fname"><i class="user"></i> Full Name</label>
                     <input type="text" id="fname" name="firstname" placeholder="Your cool name in here">
                     <label for="pnumber"><i class="phonenumber"></i> Phone Number</label>
-                    <input type="text" id="pnumber" name="phonenumber" placeholder="1234567890">
+                    <input type="text" id="pnumber" name="phonenumber" placeholder="+12345678901">
                     <input type="submit" value="Continue to checkout" class="btn">
                     <div class="error"></div>
 
@@ -50,9 +48,5 @@
 
       </div>
   </body>
-<<<<<<< HEAD
-</html>
-=======
                 <% include partials/footer %>
 </html>
->>>>>>> buttons
