--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+  <style>
+  #nav-button { display: none !important; }
+  #nav-button1 { display: none !important; }
+  
+  </style>
+
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -14,10 +21,9 @@
     <% include partials/nav %>
 
     <div class="main-container">
-      <h2> GET READY FOR SOME GOOD FOOD</h2>
-        <h4>FoodNow</h4>
-          <p>The restaurant is now preparing your order.</p>
-          <p>We will send you a message on how long is going to take for your order to be ready.</p>    
+      <h2> YOUR ORDER IS BEING PREPARED</h2>
+      <hr>
+          <p>You will receive a SMS message shortly with the pickup time</p>    
         <h4>ENJOY!</h4>
     </div>
 
