--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <title>FoodNow - Home Page</title>
 
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
@@ -20,10 +21,11 @@
   <% include partials/nav %>
 
     <section class="menu-container">
+    <div class="menu-section-picture"><img src="/images/chickenw.jpg"></div>
         <div class="menu-body">
           <div class="menu-section-main">
             <div class="menu-item">
-              <h2 class="menu-section-title">MAIN COURSE</h2>
+              <h2 class="menu-section-title">MAIN</h2>
             </div>
           </div>
 
