--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+  <style>
+  #nav-button { display: none !important; }
+  </style>  
+
+    <title>Home Page</title>
+
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -8,8 +15,8 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/summary.js"></script> 
+   
   </head>
-  
   <body>
       <% include partials/nav %>
 
@@ -40,6 +47,7 @@
                     <div class="error"></div>
 
                 </div>
+        
               </div>
             </form>
           </div>
@@ -48,5 +56,5 @@
 
       </div>
   </body>
-                <% include partials/footer %>
+      <% include partials/footer %>
 </html>
