--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,7 +15,7 @@
   display: block;
   font-weight:normal;
   margin: 20px 0; 
-  margin-top: 10rem; 
+  margin-top: 5rem; 
   text-align: Center;
 }
  
@@ -47,7 +47,11 @@
   padding-bottom: 3rem; 
 }
 
-#test {
-  background-image: url("/images/transparent_chicken_wings.png")
+.menu-section-picture {
+  width: 100%;
+  margin: 0;
+}
 
+#test {
+  background-color: rgb(219, 214, 214); 
 }
